add current works